[build-system]
requires = ["numpy", "scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "topology_analysis"
authors = [ { name = "Arnaud Rolland", email = "arnaud.rollandmail@gmail.com" } ]
version = "0.1.0"
description = "High-performance Python module with C++ backend to analyse numerical simulation outputs of planetary magnetosphere"
readme = "README.md"
keywords = ["magnetosphere", "magnetopause", "bow shock", "Gorgon"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Space Weather Scientists",
]
